Edit copyright section and logos

--- a/templates/includes/_footer.twig
+++ b/templates/includes/_footer.twig
@@ -85,15 +85,7 @@
     <div class="subfooter">
         <div class="container">
             <div class="subfooter-inner">
-                <div id="w-node-_8137663d-4316-5de2-dc0c-31323dc8a383-561c8b57" class="subfooter-column"><a href="/"
-                        aria-current="page" class="subfooter-brand w-inline-block w--current">
-                        {% set logo = header.logo.one() %}
-								{% if logo %}
-								<img src="{{ logo.url }}" loading="lazy" alt="logo" class="footer-logo-image">
-								
-								{% endif %}
-                       
-                    </a></div>
+                <div id="w-node-_8137663d-4316-5de2-dc0c-31323dc8a383-561c8b57" class="subfooter-column"> <p class="copyright">&copy; {{ now|date('Y') }},All rights reserved. Site consult steel and construction</div>
                 <div id="w-node-_8137663d-4316-5de2-dc0c-31323dc8a38d-561c8b57" class="subfooter-button-outer-1"><a
                         href="https://dimetechgroup.com" target="_blank" class="powered-by-webflow-link w-inline-block">
                         <p class="webflow-text">Powered by Dimetech group</p>
