--- a/templates/index.twig
+++ b/templates/index.twig
@@ -121,16 +121,16 @@
                                     data-w-id="a51d6f26-c4b1-3e87-97e3-18981062399c" style="opacity:0"
                                     class="content-text-1">{{entry.aboutText}}</p>
                                 <div class="buttons-wrap">
-                                    <div class="button-overlap-4"><a href="/company-1"
+                                    <div class="button-overlap-4"><a href="/about_us"
                                             class="main-button w-inline-block">
                                             <div class="button-inner">
-                                                <p class="button-title">Company</p><img
+                                                <p class="button-title">Learn More</p><img
                                                     src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
                                                     loading="lazy" alt="" class="button-icon" />
                                             </div>
                                             <div class="button-pattern"></div>
                                         </a></div>
-                                    <div class="button-overlap-2"><a href="/contact-1" class="text-link">Contact us</a>
+                                    <div class="button-overlap-2"><a href="/contact" class="text-link">Contact us</a>
                                     </div>
                                 </div>
                             </div>
@@ -599,8 +599,8 @@
                 <div class="container">
                     <div class="padding-inner">
                         <div class="content-block-logos">
-                            <p class="uppercase-title-border">Brands</p>
-                            <h5 class="heading is-brand-title">Business partners</h5>
+                            <p class="uppercase-title-border">Clients</p>
+                            <h5 class="heading is-brand-title">They trusted us we delivered</h5>
                         </div>
                         <div class="brands w-dyn-list">
                             <div data-w-id="6962c5e0-33b2-495b-d0fa-c872f005e478" style="opacity:0" role="list"
@@ -625,21 +625,7 @@
                                
                             </div>
                         </div>
-                        <div class="w-layout-grid brands-content-grid">
-                            <div id="w-node-_6962c5e0-33b2-495b-d0fa-c872f005e489-d68d3dd3">
-                                <p class="brands-paragraph">Company that specializes in the construction solution areas.
-                                </p>
-                            </div>
-                            <div id="w-node-_6962c5e0-33b2-495b-d0fa-c872f005e48c-d68d3dd3"><a href="/brands"
-                                    class="main-button is-full-width w-inline-block">
-                                    <div class="button-inner">
-                                        <p class="button-title">All brands</p><img
-                                            src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                            loading="lazy" alt="" class="button-icon" />
-                                    </div>
-                                    <div class="button-pattern"></div>
-                                </a></div>
-                        </div>
+                        
                     </div>
                 </div>
             </section>
