Add project page

--- a/templates/includes/_header.twig
+++ b/templates/includes/_header.twig
@@ -1,6 +1,5 @@
-<!DOCTYPE html><!-- This site was created in Webflow. https://www.webflow.com -->
-<!-- Last Published: Thu Aug 18 2022 10:09:58 GMT+0000 (Coordinated Universal Time) -->
-<html data-wf-page="625295532800cf7ed68d3dd3" data-wf-page="6259799853b885f394592b9d" data-wf-site="625295532800cfe2dd8d3dd2" data-wf-site="625295532800cfe2dd8d3dd2">
+<!DOCTYPE html>
+<html  data-wf-page="6253fcf57aad1f2b7f92a080" data-wf-site="625295532800cfe2dd8d3dd2" data-wf-page="625295532800cf7ed68d3dd3" data-wf-site="625295532800cfe2dd8d3dd2" data-wf-page="6253fcf57aad1f2b7f92a080" data-wf-site="625295532800cfe2dd8d3dd2" data-wf-page="6259799853b885f394592b9d" data-wf-site="625295532800cfe2dd8d3dd2" data-wf-page="625295532800cf7ed68d3dd3" data-wf-page="6259799853b885f394592b9d" data-wf-site="625295532800cfe2dd8d3dd2" data-wf-site="625295532800cfe2dd8d3dd2">
 
 <head>
   <title>{% if title is defined %}{{ title }} - {% endif %}{{ siteName }}</title>
