--- a/templates/index.twig
+++ b/templates/index.twig
@@ -340,12 +340,14 @@
                         <div class="projects-with-lines">
                             <div class="projects-cms w-dyn-list">
                                 <div role="list" class="project-cms-grid w-dyn-items">
+                                {%set  projects = craft.entries.section('projects').limit(4) %}
+                                 {% for project in projects %}
                                     <div role="listitem" class="project-cms-item w-dyn-item"><a
                                             href="/project/luxury-house-renovation"
                                             class="project-link-block w-inline-block">
                                             <div class="project-link">
                                                 <div class="project-name-overlap">
-                                                    <p class="project-name">Luxury house renovation</p>
+                                                    <p class="project-name">{{ project.projectName }}</p>
                                                 </div><img
                                                     src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6256816300672a60b4c5c6e3_blue-arrow-right.svg"
                                                     loading="lazy" alt="" class="project-icon" />
@@ -369,97 +371,10 @@
                                                         class="cover-image" />
                                                 </div>
                                             </div>
-                                        </a></div>
-                                    <div role="listitem" class="project-cms-item w-dyn-item"><a
-                                            href="/project/modern-loft-renovation"
-                                            class="project-link-block w-inline-block">
-                                            <div class="project-link">
-                                                <div class="project-name-overlap">
-                                                    <p class="project-name">Modern loft renovation</p>
-                                                </div><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6256816300672a60b4c5c6e3_blue-arrow-right.svg"
-                                                    loading="lazy" alt="" class="project-icon" />
-                                                <div class="project-bg-1"></div><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                                    loading="lazy" alt="" class="project-icon-for-hover" />
-                                                <div class="project-bg-2"></div>
-                                                <div class="project-link-lines">
-                                                    <div class="project-line-1"></div>
-                                                    <div class="project-line-2"></div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="d70cfb5d-99e3-cdb0-3489-d0ed3a9d8d4c" style="opacity:0"
-                                                class="project-gradient-bg"></div>
-                                            <div class="_3d-block">
-                                                <div class="image-animation-trigger _3d-for-image">
-                                                    <div class="animation-color-bg is-white-color"></div><img
-                                                        src="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495.jpg"
-                                                        loading="lazy" alt="Modern loft renovation" sizes="45vw"
-                                                        srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ea71cd54c019ccc6f70_pexels-max-vakhtbovych-7545495.jpg 1920w"
-                                                        class="cover-image" />
-                                                </div>
-                                            </div>
-                                        </a></div>
-                                    <div role="listitem" class="project-cms-item w-dyn-item"><a
-                                            href="/project/kitchen-conversion"
-                                            class="project-link-block w-inline-block">
-                                            <div class="project-link">
-                                                <div class="project-name-overlap">
-                                                    <p class="project-name">Kitchen conversion</p>
-                                                </div><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6256816300672a60b4c5c6e3_blue-arrow-right.svg"
-                                                    loading="lazy" alt="" class="project-icon" />
-                                                <div class="project-bg-1"></div><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                                    loading="lazy" alt="" class="project-icon-for-hover" />
-                                                <div class="project-bg-2"></div>
-                                                <div class="project-link-lines">
-                                                    <div class="project-line-1"></div>
-                                                    <div class="project-line-2"></div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="d70cfb5d-99e3-cdb0-3489-d0ed3a9d8d4c" style="opacity:0"
-                                                class="project-gradient-bg"></div>
-                                            <div class="_3d-block">
-                                                <div class="image-animation-trigger _3d-for-image">
-                                                    <div class="animation-color-bg is-white-color"></div><img
-                                                        src="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545eaf6346751d294aff22_pexels-max-vakhtbovych-7045917.jpg"
-                                                        loading="lazy" alt="Kitchen conversion" sizes="45vw"
-                                                        srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545eaf6346751d294aff22_pexels-max-vakhtbovych-7045917-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545eaf6346751d294aff22_pexels-max-vakhtbovych-7045917-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545eaf6346751d294aff22_pexels-max-vakhtbovych-7045917-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545eaf6346751d294aff22_pexels-max-vakhtbovych-7045917.jpg 1920w"
-                                                        class="cover-image" />
-                                                </div>
-                                            </div>
-                                        </a></div>
-                                    <div role="listitem" class="project-cms-item w-dyn-item"><a
-                                            href="/project/bathroom-complete-renovation"
-                                            class="project-link-block w-inline-block">
-                                            <div class="project-link">
-                                                <div class="project-name-overlap">
-                                                    <p class="project-name">Bathroom complete renovation</p>
-                                                </div><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6256816300672a60b4c5c6e3_blue-arrow-right.svg"
-                                                    loading="lazy" alt="" class="project-icon" />
-                                                <div class="project-bg-1"></div><img
-                                                    src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/6252f1730653975c82d4a73c_east_white_24dp.svg"
-                                                    loading="lazy" alt="" class="project-icon-for-hover" />
-                                                <div class="project-bg-2"></div>
-                                                <div class="project-link-lines">
-                                                    <div class="project-line-1"></div>
-                                                    <div class="project-line-2"></div>
-                                                </div>
-                                            </div>
-                                            <div data-w-id="d70cfb5d-99e3-cdb0-3489-d0ed3a9d8d4c" style="opacity:0"
-                                                class="project-gradient-bg"></div>
-                                            <div class="_3d-block">
-                                                <div class="image-animation-trigger _3d-for-image">
-                                                    <div class="animation-color-bg is-white-color"></div><img
-                                                        src="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ebc67033714c841b288_pexels-max-vakhtbovych-7546320.jpg"
-                                                        loading="lazy" alt="Bathroom complete renovation" sizes="45vw"
-                                                        srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ebc67033714c841b288_pexels-max-vakhtbovych-7546320-p-500.jpeg 500w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ebc67033714c841b288_pexels-max-vakhtbovych-7546320-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ebc67033714c841b288_pexels-max-vakhtbovych-7546320-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ebc67033714c841b288_pexels-max-vakhtbovych-7546320-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545ebc67033714c841b288_pexels-max-vakhtbovych-7546320.jpg 1920w"
-                                                        class="cover-image" />
-                                                </div>
-                                            </div>
-                                        </a></div>
+                                        </a>
+                                    </div>
+                                    {% endfor %}
+                                    
                                 </div>
                             </div>
                             <div class="blue-lines---middle">
