Edit the project page

--- a/templates/about.twig
+++ b/templates/about.twig
@@ -215,6 +215,8 @@
                     </div>
                 </div>
             </section>
+            
+            <!--////////////////////////////////cta////////////////////////////////-->
             <section class="section cta-content-1 wf-section">
                 <div class="container is-cta-container">
                     <div class="w-layout-grid content-grid-4">
@@ -251,7 +253,7 @@
                 </div>
                 <div class="blue-95-background"></div>
             </section>
-            <!--missions -->
+            <!--cta -->
 
             {# <section class="section is-form-section wf-section">
                 <div class="container">
