--- a/templates/index.twig
+++ b/templates/index.twig
@@ -520,11 +520,11 @@
                         <div class="brands w-dyn-list">
                             <div data-w-id="6962c5e0-33b2-495b-d0fa-c872f005e478" style="opacity:0" role="list"
                                 class="brands-grid w-dyn-items">
-                                {% for logos in entry.clientLogos.all() %}
-                                <div role="listitem" class="brand-item w-dyn-item"><a href="/brand/alley"
+                                {% for client in entry.clientLogos.all() %}
+                                <div role="listitem" class="brand-item w-dyn-item"><a href="#"
                                         class="brand-link-block w-inline-block"><img
-                                            src="{{logo.url}}"
-                                            loading="lazy" alt="{{logo.filename}}" class="brands-logo" /></a>
+                                            src="{{client.url}}"
+                                            loading="lazy" alt="{{client.filename}}" class="brands-logo" /></a>
                                     <div class="corner-lines">
                                         <div class="corner-line-1"></div>
                                         <div class="corner-line-2"></div>
@@ -595,10 +595,10 @@
             <!-- end of footer -->
         </main>
     </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=625295532800cfe2dd8d3dd2"
-        type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    <script src="{{siteUrl}}jquett.js"
+        type="text/javascript" 
         crossorigin="anonymous"></script>
-    <script src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/js/webflow.097fc263b.js"
+    <script src="{{siteUrl}}flow.js"
         type="text/javascript"></script>
 
 
