--- a/templates/projects/index.twig
+++ b/templates/projects/index.twig
@@ -2,6 +2,7 @@
 {% block content%}
 
 {% set projects = craft.entries.section('projects').all() %}
+
 <div id="webpage" class="page-wrapper">
 
         <div class="global-styles w-embed"></div>
@@ -68,8 +69,9 @@
                             <div class="projects-cms w-dyn-list">
                                 <div role="list" class="project-cms-grid w-dyn-items">
                                 {% for project in projects %}
+                                 {% set projectPhoto = project.coverimage.one() %}
                                     <div role="listitem" class="project-cms-item w-dyn-item"><a
-                                            href="/projects/{{ project.projectName }}"
+                                            href="projects/{{ project.slug }}"
                                             class="project-link-block w-inline-block">
                                             <div class="project-link">
                                                 <div class="project-name-overlap">
@@ -93,9 +95,9 @@
                                             <div class="_3d-block">
                                                 <div class="image-animation-trigger _3d-for-image">
                                                     <div class="animation-color-bg is-white-color"></div><img
-                                                        src="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213.jpg"
+                                                        src="{{projectPhoto.url}}"
                                                         loading="lazy" alt="Luxury house renovation" sizes="45vw"
-                                                        srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213.jpg 1920w"
+                                                        {# srcset="https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-800.jpeg 800w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1080.jpeg 1080w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213-p-1600.jpeg 1600w, https://assets.website-files.com/6252f3c395e36c6da2794a2c/62545e9d59e6100b9689423f_pexels-max-vakhtbovych-7546213.jpg 1920w" #}
                                                         class="cover-image" />
                                                 </div>
                                             </div>
@@ -183,10 +185,10 @@
             </section>
         </main>
     </div>
-    <script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=625295532800cfe2dd8d3dd2"
+    <script src="{{siteUrl}}jquett.js"
         type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
         crossorigin="anonymous"></script>
-    <script src="https://assets.website-files.com/625295532800cfe2dd8d3dd2/js/webflow.097fc263b.js"
+    <script src="{{siteUrl}}web.js"
         type="text/javascript"></script>
 </div>
 {% endblock%}
